move edit and delete buttons to card bottom right

--- a/popup.html
+++ b/popup.html
@@ -159,7 +159,7 @@
       .actions {
         display: flex;
         gap: 0.5rem;
-        margin-left: auto;
+        justify-content: flex-end;
       }
       .bookmark-url {
         word-break: break-all;
