--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,9 @@
         --foreground: 222.2 84% 4.9%;
         --card: 0 0% 100%;
         --card-foreground: 222.2 84% 4.9%;
+        --card-shadow:
+          0px 18px 36px -18px rgba(0, 0, 0, 0.1),
+          0px 30px 45px -30px rgba(50, 50, 93, 0.25);
         --popover: 0 0% 100%;
         --popover-foreground: 222.2 84% 4.9%;
         --primary: 222.2 47.4% 11.2%;
@@ -45,19 +48,19 @@
           "Segoe UI Symbol",
           "Noto Color Emoji";
         width: 400px;
-        padding: 1rem;
+        padding: 0 1rem;
         margin: 0;
       }
       .input {
         display: flex;
         height: 2.5rem;
-        width: 100%;
         border-radius: var(--radius);
         border-width: 1px;
         border-style: solid;
         border-color: hsl(var(--input));
         background-color: hsl(var(--background));
-        padding: 0 0.75rem;
+        padding: 0 0.5rem;
+        width: calc(100% - 1rem);
         font-size: 0.875rem;
         line-height: 1.25rem;
         ring-offset-color: hsl(var(--background));
@@ -90,6 +93,7 @@
         padding: 0 1rem;
         width: 100%;
         margin-bottom: 0.75rem;
+        cursor: pointer;
       }
       .button:hover {
         background-color: hsla(var(--primary), 0.9);
@@ -118,43 +122,37 @@
         background-color: hsl(var(--accent));
         color: hsl(var(--accent-foreground));
       }
-      .card {
-        border-radius: calc(var(--radius) + 0.25rem);
-        border-width: 1px;
-        border-style: solid;
-        border-color: hsl(var(--border));
-        background-color: hsl(var(--card));
-        color: hsl(var(--card-foreground));
-        box-shadow:
-          0 1px 3px 0 rgba(0, 0, 0, 0.1),
-          0 1px 2px -1px rgba(0, 0, 0, 0.1);
-        margin-bottom: 0.5rem;
+      .bookmark-item {
+        border-bottom: 1px solid hsl(var(--border));
+        padding: 1rem 0;
       }
-      .card-header {
-        display: flex;
-        flex-direction: column;
-        gap: 0.375rem;
-        padding: 1.5rem;
-        padding-bottom: 0;
+      .bookmark-item:last-child {
+        border-bottom: none;
       }
-      .card-title {
-        font-size: 1.125rem;
-        font-weight: 600;
-        line-height: 1.5rem;
+      .bookmark-item h3 {
+        font-size: 1rem;
+        font-weight: 400;
+        margin: 0 0 0.5rem 0;
+        padding: 0.25rem 0;
       }
-      .card-content {
-        padding: 1.5rem;
-        padding-top: 0;
-        overflow: hidden; /* Prevent overflow from content */
-      }
-      .card-description {
+      .bookmark-item p {
         font-size: 0.875rem;
         color: hsl(var(--muted-foreground));
+        margin: 0.5rem 0;
       }
       #bookmarks-list {
         list-style: none;
         padding: 0;
         margin: 0;
+      }
+      #bookmarks-list li {
+        margin: 0;
+      }
+      #bookmarks-list li .item-header {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 0.5rem;
       }
       .actions {
         display: flex;
@@ -164,6 +162,7 @@
       .bookmark-url {
         word-break: break-all;
         overflow-wrap: anywhere;
+        margin-bottom: 0.5rem;
       }
       .bookmark-url a {
         color: hsl(var(--primary));
@@ -177,12 +176,16 @@
         top: 0;
         z-index: 10;
         background-color: hsl(var(--background));
-        padding: 1rem;
-        margin: 0 -1rem 0.75rem -1rem;
-        width: calc(100% + 2rem);
+        border-bottom: 1px solid hsl(var(--border));
+        width: 100%;
+        padding: 1rem 0;
+        margin: 0;
+        display: flex;
+        box-shadow: var(--card-shadow);
       }
       .sticky-header .button {
-        margin-bottom: 0;
+        margin: 0 0 0 0.5rem;
+        width: auto;
       }
     </style>
   </head>
@@ -194,7 +197,7 @@
         class="input"
         placeholder="Search bookmarks..."
       />
-      <button id="add-btn" class="button">Add Bookmark</button>
+      <button id="add-btn" class="button button-outline">+</button>
     </div>
     <ul id="bookmarks-list"></ul>
     <script src="popup.js"></script>
