add minisearch for fuzzy search

--- a/popup.html
+++ b/popup.html
@@ -200,6 +200,7 @@
       <button id="add-btn" class="button button-outline">+</button>
     </div>
     <ul id="bookmarks-list"></ul>
+    <script src="minisearch.min.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
