change to dark color scheme

--- a/popup.html
+++ b/popup.html
@@ -5,8 +5,8 @@
     <title>Local Bookmark Manager</title>
     <style>
       :root {
-        --background: 0 0% 100%;
-        --foreground: 222.2 84% 4.9%;
+        --background: 218 18% 15%;
+        --foreground: 210 16%, 84%;
         --card: 0 0% 100%;
         --card-foreground: 222.2 84% 4.9%;
         --card-shadow:
@@ -14,12 +14,12 @@
           0px 30px 45px -30px rgba(50, 50, 93, 0.25);
         --popover: 0 0% 100%;
         --popover-foreground: 222.2 84% 4.9%;
-        --primary: 222.2 47.4% 11.2%;
+        --primary: 210 16%, 84%;
         --primary-foreground: 210 40% 98%;
         --secondary: 210 40% 96.1%;
         --secondary-foreground: 222.2 47.4% 11.2%;
         --muted: 210 40% 96.1%;
-        --muted-foreground: 215.4 16.3% 46.9%;
+        --muted-foreground: 214 4% 59%;
         --accent: 210 40% 96.1%;
         --accent-foreground: 222.2 47.4% 11.2%;
         --destructive: 0 84.2% 60.2%;
@@ -59,6 +59,7 @@
         border-style: solid;
         border-color: hsl(var(--input));
         background-color: hsl(var(--background));
+        color: hsl(var(--foreground));
         padding: 0 0.5rem;
         width: calc(100% - 1rem);
         font-size: 0.875rem;
